--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap Example</title>
+    <title>Jenna Tran</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -12,6 +12,7 @@
         .navbar {
             margin-bottom: 0;
             border-radius: 0;
+            background-color:lightpink;
         }
 
         /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
@@ -51,14 +52,14 @@
                 </button>
                 <a class="navbar-brand" href="#">Jenna Tran's Website</a>
             </div>
-            <div class="collapse navbar-collapse" id="myNavbar" style="background-color:lightcoral">
-                <ul class="nav navbar-nav">
+            <div class="collapse navbar-collapse" id="myNavbar" style="background-color:lightpink">
+                <ul class="nav navbar-nav" style="color:white">
                     <li class="active"><a href="#">Home</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">Skills</a></li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">   
+                <ul class="nav navbar-nav navbar-right" style="background-color:lightpink">
                 </ul>
             </div>
         </div>
@@ -73,19 +74,18 @@
             </div>
             <div class="col-sm-8 text-left">
                 <h1>Welcome</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <hr>
+                <p>Hi my name is Jenna Tran and I am currently a Junior at the Univeristy of Oklahoma. This website was bulit to display my overall skills and completed projects. 
                 <h3>Test</h3>
                 <p>Lorem ipsum...</p>
             </div>
             <div class="col-sm-2 sidenav">
-               
-                
             </div>
         </div>
     </div>
+    <footer class="container-fluid text-center">
+ 
+    </footer>
 
-   
 
 </body>
 </html>
