--- a/About.html
+++ b/About.html
@@ -1,12 +1,104 @@
 ﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <title>Jenna Tran</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <style>
+        /* Remove the navbar's default margin-bottom and rounded borders */
+        .navbar {
+            margin-bottom: 0;
+            border-radius: 0;
+                        background-color:#071e22;
+        }
+
+        /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+        .row.content {
+            height: 650px
+        }
+
+        /* Set gray background color and 100% height */
+        .sidenav {
+            padding-top: 20px;
+            background-color: #B8D8D8;
+            height: 100%;
+        }
+
+        /* On small screens, set height to 'auto' for sidenav and grid */
+        @media screen and (max-width: 767px) {
+            .sidenav {
+                height: auto;
+                padding: 15px;
+            }
+
+            .row.content {
+                height: auto;
+            }
+        }
+    </style>
 </head>
-<h1> About Me</h1>
 <body>
-My name is Jenna Tran and I am from Oklahoma City, OK. 
+
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Jenna Tran's Website</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li ><a href="index.html">Home</a></li>
+                    <li class="active"style="background-color:#071e22"><a href="About.html"style="background-color:#071e22">About</a></li>
+                    <li><a href="Project.html">Projects</a></li>
+                    <li><a href="Skills.html">Skills</a></li>
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+
+    <div class="container-fluid text-center">
+        <div class="row content">
+            <div class="col-sm-2 sidenav">
+                <p><a href="#"></a></p>
+                <p><a href="#"></a></p>
+                <p><a href="#"></a></p>
+            </div>
+            <div class="col-sm-8 text-left">
+                <h1>About Me</h1>
+                <p>
+                    Hi my name is Jenna Tran and I am from Oklahoma City, OK. I am currently majoring in Accounting and Management Information Systems.
+                    
+               While obtaining two bachelor's degree at the University of Oklahoma, I am also pursuing a Master's degree in the accelerating Masters program for Management Informantion Technology. My expexted graduation date is December 2021.'
+                    </p>
+                <br />
+                    <h3>My hobbies</h3>
+                <br />
+                <ul>
+                    <li>
+                        Traveling
+                    </li>
+                    <li>
+                        Decorating
+                    </li>
+                    <li>
+                        Kayaking
+                    </li>
+                </ul>
+            </div>
+            <div class="col-sm-2 sidenav">
+            </div>
+        </div>
+    </div>
+
+
+
 </body>
 </html>
