--- a/Project.html
+++ b/Project.html
@@ -50,14 +50,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Jenna Tran's Website</a>
+                <a class="navbar-brand" href="index.html">Jenna Tran's Website</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="About.html">About</a></li>
-                    <li class="active"style="background-color:#071e22" ><a href="Project.html"style="background-color:#071e22">Projects</a></li>
+                    <li class="active" style="background-color:#071e22"><a href="Project.html" style="background-color:#071e22">Projects</a></li>
                     <li><a href="Skills.html">Skills</a></li>
+                    
+
                 </ul>
 
             </div>
