--- a/Skills.html
+++ b/Skills.html
@@ -50,16 +50,17 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Jenna Tran's Website</a>
+                <a class="navbar-brand" href="index.html">Jenna Tran's Website</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li ><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="About.html">About</a></li>
                     <li><a href="Project.html">Projects</a></li>
-                    <li class="active"style="background-color:#071e22"><a href="Skills.html"style="background-color:#071e22">Skills</a></li>
-                </ul>
 
+                    <li class="active" style="background-color:#071e22"><a href="Skills.html" style="background-color:#071e22">Skills</a></li>                
+                
+                    </ul>
             </div>
         </div>
     </nav>
@@ -74,9 +75,10 @@
             <div class="col-sm-8 text-left">
                 <h1>My Skills</h1>
                 <p>
-                    On this page I will go more in depth with my overall skills as an individual. In addition, I will be listing the classes I have take as an MIS major and the skills I have gained from it. 
+                    On this page I will go more in depth with my overall skills as an individual. In addition, I will be listing the classes I have take as an MIS major and the skills I have gained from it.</p> 
                     <br />
                     <h3>Classes taken and skills aquired</h3>
+                    <br />
                 <ul>
                     <li>Database: In this class I learned how to e use SQL. From there I have gained a skill in SQL. 
                     I now know how to create ERDs, Normalization, and implementing a database</li>
