--- a/Project.html
+++ b/Project.html
@@ -89,10 +89,10 @@
 
                     </li>
                     <li>
-                        <a href="#"> Course Calender Project</a>: In this project a course calender was created by using a WPF application 
+                        <a href="https://github.com/TranOwensCallahan/GroupProject"> Course Calender Project</a>: In this project a course calender was created by using a WPF application 
                     </li>
                     <li>
-                        <a href="#"> Compilation of Other Projects</a>: Here's a collection of other projects I have accomplished in the repository.
+                        <a href="https://github.com/Tran0020"> Compilation of Other Projects</a>: Here's a collection of other projects I have accomplished in the repository.
                     </li>
                 </ul>
             </div>
